# Ascend-VisionSDK

./: CONTRIBUTING.md  LICENSE.md  README.md  build_all.sh  run_presmoke.sh
docs/zh/: _memu_visionsdk.md  appendix.md  common_operations.md  faq.md  installation_guide.md  introduction.md  quick_start.md  release_notes.md  security_hardening.md  user_guide.md
docs/zh/api/: README.md  api_C++.md  api_Python.md  plugins.md
mxBase/src/mxbase/module/MbCV/Image/ImageProcessor/: ImageProcessorDptr.hpp
mxBase/src/mxbase/module/MbCV/Video/VideoEncoder/: VideoEncoderCheck.h
test/presmoke/: install_test.sh
test/presmoke/testcases/test_image/: CMakeLists.txt  run_image_tests.sh  test_image_to_tensor.cpp  test_tensor_to_image.cpp
test/presmoke/testcases/test_tensor/: CMakeLists.txt  run_tensor_tests.sh  test_tensor_ops.cpp
